# AoC23_Haskell

./: .gitignore  AoC2023.cabal
app/: Day1.hs  Day10.hs  Day11.hs  Day12.hs  Day15.hs  Day16.hs  Day19.hs  Day2.hs  Day3.hs  Day4.hs  Day5.hs  Day6.hs  Day7.hs  Day8.hs  Day9.hs  Main.hs  Utils.hs
